# Robotics-first-project

./: CMakeLists.txt
devel/: .catkin
devel/include/lla2enu/: DistanceCalculator.h  DistanceCalculatorRequest.h  DistanceCalculatorResponse.h
devel/lib/lla2enu/: collector  distance_calc  enu_front  enu_obs
devel/lib/pkgconfig/: lla2enu.pc
devel/lib/python2.7/dist-packages/lla2enu/srv/: _DistanceCalculator.py  __init__.py
devel/share/common-lisp/ros/lla2enu/srv/: DistanceCalculator.lisp  _package.lisp  _package_DistanceCalculator.lisp  lla2enu-srv.asd
devel/share/gennodejs/ros/lla2enu/srv/: DistanceCalculator.js  _index.js
devel/share/lla2enu/cmake/: lla2enu-msg-extras.cmake  lla2enu-msg-paths.cmake  lla2enuConfig.cmake
devel/share/roseus/ros/lla2enu/: manifest.l
devel/share/roseus/ros/lla2enu/srv/: DistanceCalculator.l
lla2enu/: CMakeLists.txt  package.xml
lla2enu/launch/: lla2enu.launch
lla2enu/src/: collector.cpp  sub.cpp  subobs.cpp
src/: sub.cpp
src/first_project/: CMakeLists.txt  ReadMe.txt  package.xml  provaobs.txt
src/first_project/cfg/: parameters.cfg
src/first_project/launch/: launcher.launch
src/first_project/src/: collector.cpp  distance_calc.cpp  sub.cpp
src/lla2enu/: CMakeLists.txt  package.xml  prova.txt
src/lla2enu/cfg/: myparam.cfg  parameters.cfg
src/lla2enu/launch/: lla2enu.launch
src/lla2enu/msg/: custom.msg
src/lla2enu/src/: collector.cpp  distance_calc.cpp  sub.cpp  subobs.cpp  tf_odom.cpp
src/lla2enu/srv/: DistanceCalculator.srv
